# AegisFS

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  aegis-fs.toml.example
src/: config.rs  crypto.rs  filesystem.rs  main.rs  s3_client.rs  storage.rs
